Changes
=======

Next
----

- Increase default precision for the merge tool from 7 to 10 (#1837).
- Allow rio-clip and rio-convert to overwrite output files (#1836).
- Allow src_crs parameter to fully override the source dataset's CRS (#1808).

1.1.1 (2019-11-13)
------------------

Bug fixes:

- Calling a dataset's sample method with coordinates outside the extent of a
  dataset with a nodata value of None has raised a TypeError (#1822). Now, it
  gives the values we would get from a boundless read of the dataset's values.
- Use new set_proj_search_path() function to set the PROJ data search path. For
  GDAL versions before 3.0 this sets the PROJ_LIB environment variable. For
  GDAL version 3.0 this calls OSRSetPROJSearchPaths(), which overrides
  PROJ_LIB (#1823).
- Check for header.dxf file instead of pcs.csv when looking for installed GDAL
  data. The latter is gone with GDAL 3.0 but the former remains (#1823).
- RGB rasters are now properly displayed by rasterio.plot.show (#1650).

Notes:

- The wheels on PyPI include GDAL 2.4.3 with a patch that addresses the
  multithreading issue reported in #1828.

1.1.0 (2019-10-07)
------------------

There have been no changes since 1.1b3.

1.1b3 (2019-10-03)
------------------

Bug fixes:

- A regression in WarpedVRT creation (#1799) has been fixed. This required
  implementation of GDALDatasetH reference counting in DatasetBase.stop().

1.1b2 (2019-10-02)
------------------

Bug fixes:

- When built from the official source distribution rasterio 1.1b1 would not
  import due to the omission of _transform.c from the list of extension sources
  in setup.py. This has been fixed.

1.1b1 (2019-10-01)
------------------

Deprecations:

- Support for Python 2 is deprecated and a warning is raised from the
  rasterio.compat module. This module will be deleted in a future version.

New features:

- Added a new ``tag_namespaces()`` method datasets that returns names of